// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxFormFloating customize 1`] = `
<div>
  <div
    class="form-floating bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxFormFloating component 1`] = `
<div>
  <div
    class="form-floating"
  />
</div>
`;
